<resources>
    <string name="app_name">CafeTraveler</string>
    <string name="title_activity_maps">CafeTraveler</string>

    <string name="cafe_name">店家名稱 : %1$s</string>
    <string name="cafe_lat">經度 : %1$f</string>
    <string name="cafe_lon">緯度 : %1$f</string>
    <string name="cafe_mrt">最近的捷運站 : %1$s</string>
    <string name="cafe_line">哪一條線 : %1$s</string>
    <string name="cafe_open_time">營業時間： %1$s</string>

    <string name="filter_choice">請選擇</string>
    <string name="rank_view_title">%1$s : </string>
    <string name="recycler_summary">搜尋結果 : %1$s 筆</string>
    <string name="recycler_bottom">已到最底</string>


    <string name="line_choice">請選擇線：</string>
    <string name="station_choice">請選擇站名：</string>
    <string name="if_wifi">是否有wifi？(星數越高越強)</string>
    <string name="if_seat">座位數量(星數越高越多)</string>
    <string name="if_limit">是否限制用餐時間？</string>
    <string name="if_socket">是否需要插座？</string>
    <string name="if_cheap">消費金額(星數越高越貴)</string>

    <string name="level_1">1\u2605</string>
    <string name="level_2">2\u2605</string>
    <string name="level_3">3\u2605</string>
    <string name="level_4">4\u2605</string>
    <string name="level_5">5\u2605</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="maybe">或許(視情況)</string>

    <string-array name="line">
        <item>請選擇</item>
        <item>板南線</item>
        <item>松山新店線</item>
        <item>文湖線</item>
        <item>淡水信義線</item>
        <item>中和新蘆線</item>
    </string-array>

    <string name="coming_soon_dialog_title">物件名稱</string>
    <string name="coming_soon_string">即將推出，請再等等吧</string>
    <string name="coming_soon_OK">好的</string>
</resources>
